# nichecompass

./: .gitignore  .readthedocs.yaml  Dockerfile  LICENSE  README.md  Untitled.ipynb  autotalker.py  autotalker_modular.py  autotalker_script.py  autotalker_test.py  autotalker_test_script.py  autotalker_testing.py  autotalker_tutorial-Copy1.ipynb  autotalker_tutorial.ipynb  autotalker_tutorial_new.ipynb  codecov.yml  dataset_test.py  deeplinc.py  environment.yaml  environment.yml  environmentcpu.yml  pyg_dataloader_test.ipynb  pyproject.toml  readthedocs.yml  requirements.txt  setup.py  test.ipynb  test.py  test_config.json  test_datapreprocessors.py  testing.ipynb  train_autotalker.ipynb  train_autotalker.py
.devcontainer/: devcontainer.json
autotalker/: __init__.py
deeplinc/: _mymodule.py  test.ipynb
docs/: api.md  conf.py  contributing.md  index.md  installation.md  references.bib  requirements.txt  template_usage.md
env/: Dockerfile  deeplinc_env.yml  environment  environment.yml  environment_cpu.yml
misc_scripts/: _trainer.py  _utils.py  adversarial_loss  autotalker_test.ipynb  autotalker_trainer.py  bcewithlogits_posweight.py  compute_combined_loss.py  data_preparation.py  dataset_test.py  deeplinc.py  discriminator.py  get_prob.py  get_roc_score.py  grads.py  inefficient_edge_recon_loss.py  nn_neighbors.ipynb  optimal_threshold_selection.py  reduce_edges_per_node.py  self_loops.py  sparse_gcn_layer.py  sparse_mx.py  torch_scatter_gpu.py  trainer.py
model_artefacts/: adata.h5ad  attr.pkl  model_params.pt  var_names.csv
nichecompass/: __main__.py  config.py  dataset.py  main.py  model.py  module.py  report.py  train.py  transform.py
notebooks/: autotalker_benchmarking.ipynb  autotalker_benchmarking_results.ipynb  autotalker_data_analysis_tutorial.ipynb  autotalker_debugging.ipynb  autotalker_temp.ipynb  autotalker_testing.ipynb  color_utils.py  gene_programs.ipynb  nichecompass_multimodal_tutorial.ipynb  nichecompass_oneshot_sample_integration_tutorial.ipynb  nichecompass_query_reference_mapping_tutorial.ipynb  nichecompass_reference_query_mapping_tutorial.ipynb  nichecompass_sample_integration_tutorial.ipynb  nichecompass_single_sample_tutorial.ipynb  temp.ipynb  temp2.ipynb  temp3.ipynb  temp4.ipynb  temp5.ipynb  test.ipynb
tests/: test_basic.py  (+3 more)
(+15302 files in other folders)
